--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</head>
 	<body onload="setInterval('updateClock()', 200);">
 		
-		<article class="main__article">
+		<article class="main__article full">
 
-        <h2 class="main__title"></h2>
+        <h2 class="main__title" id="clock"></h2>
 
-        <p id="clock"></p>
+        
 
         <form id="setTime" class="main__form">
           <div class="form__group">
