--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 		<meta name="viewport" content="width=device-width">
 		
 		<link rel="stylesheet" href="css/main.css">
-		<style> 
-		</style>
+		<script src="js/jquery.min.js" ></script>
 		<script src="js/clock.js" ></script>
 	</head>
 	<body onload="setInterval('updateClock()', 200);">
